--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,46 +2,36 @@
 node_modules/
 vendor/
 
-# Environment variables
+# Environment files
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
-# Logs
+# Log files
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Build output
+# Build outputs
 dist/
 build/
 out/
+coverage/
 
-# System files
-.DS_Store
-Thumbs.db
-
-# IDE files
+# IDE specific
 .vscode/
 .idea/
 *.swp
 
-# Sensitive files
+# Security files
 *.key
 *.pem
 *.crt
 *.p12
 *.pfx
 
-# Temporary files
-*.tmp
-*.temp
-*.bak
-
-# Coverage reports
-coverage/
-
-# Other
-*.lock
+# System files
+.DS_Store
+Thumbs.db
