--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,9 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.2"
+    "tailwindcss": "^4.1.2",
+    "@tailwindcss/postcss": "^4.1.2"
   }
 }
