--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^4.1.2"
   }
 }
