--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,10 +47,9 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^7.1.0",
+    "tailwindcss": "^3.4.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.38",
-    "postcss-import": "^16.1.0",
-    "tailwindcss": "^3.4.3"
+    "@craco/craco": "^7.1.0"
   }
 }
