--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.28.0",
-    "tailwind-scrollbar": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,9 +46,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
+    "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.38",
-    "@craco/craco": "^7.1.0"
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.3"
   }
 }
