--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
     "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.38",
-    "tailwind-scrollbar": "^3.1.0",
+    "postcss-import": "^14.1.0",
+    "tailwind-scrollbar": "^1.3.2",
     "tailwindcss": "^3.4.3"
   }
 }
